--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,7 @@ nav button:hover {
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 30px;
   padding: 3%;
-  height: 100%;
+  height: 90%;
   width: 90vw;
   background-color: rgb(85, 82, 104);
   overflow-y: scroll;
@@ -198,4 +198,24 @@ form textarea {
 
 .task p::-webkit-scrollbar {
   display: none;
+}
+
+.filter {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  padding-left: 20px;
+  background-color: #9497aa;
+  height: 10%;
+  width: 100%;
+}
+
+.filter select {
+  height: 60%;
+  width: 20%;
+  font-size: 1.5rem;
+  text-align: center;
+  background-color: #59595a;
+  color: white;
+  border-radius: 5px;
 }
